// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable.TableContainer should render 1`] = `
<TableContainer
  className="custom-class"
>
  <div
    className="custom-class cds--data-table-container"
  />
</TableContainer>
`;

exports[`DataTable.TableContainer should support enable sticky header 1`] = `
<TableContainer
  stickyHeader={true}
>
  <div
    className="cds--data-table-container cds--data-table--max-width"
  />
</TableContainer>
`;
